# DustSoft

./: .gitignore  README.md  dustsoft-test.cmd  dustsoft.cmd  pyproject.toml
arduino/analog_reader/: analog_reader.ino
config/: hardware.example.json
deploy/: dustsoft.service
docs/: operator_manual.md  remote_access.md  settings_schema.md  technical_spec.md
scripts/: raspberry_relay_from_arduino.py
src/: main.py
src/core/: application.py  config_model.py  controller.py  cycle.py  errors.py  service_api.py  state_machine.py
src/devices/: arduino.py  config.py  drivers.py  mocks.py  ports.py  raspberry_pi.py
src/dustsoft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/logging_system/: __init__.py
src/reference_meter/: dusttrak.py
src/remote/: __init__.py
src/safety/: interlock.py
src/services/: __init__.py  injection_scheduler.py
src/storage/: __init__.py
src/ui/: __init__.py  app.py
tests/: test_controller_safety.py
