[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dustsoft"
version = "0.1.0"
description = "Hardware-oriented application skeleton with clean architecture ports and mocks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["gpiozero>=2.0", "lgpio>=0.2.2.0", "pyserial>=3.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dustsoft = "main:main"
